# Lakehouse-RAG

./: .gitignore  README.md  app.yml  main.py  pyproject.toml  requirements.txt
configs/: tools_config.yml
data/: dummy.txt
memory/: 2025-10-05.csv  2025-10-06.csv
notebooks/: databricks_langchain_demo.ipynb  databricks_secret_manager.ipynb  graph.ipynb
notebooks/langchain_integrations/: databricks.ipynb  gemini.ipynb  groq.ipynb  ollama.ipynb  prompts.ipynb  supabase.ipynb
notebooks/langgraph_integrations/: dynamic_spark_sql.ipynb  rag_agent.ipynb  spark_sql_agent.ipynb  spark_sql_graph.ipynb
notebooks/tools/: custom_query_agent.ipynb  query.ipynb  query_agent.ipynb  query_agent_script.py  restricted_query_agent.ipynb  schema.ipynb
src/: load_config.py
src/agents/: backend.py  graph.py
src/agents/tools/: __init__.py  rag.py  spark_sql.py  tavily_search.py
src/assistant/: __init__.py  backend.py  memory.py
src/prompts/: router.py  spark_sql.py  supervisor.py  web_search.py
src/utils/: __init__.py  app_utils.py
supabase/: DDL_langchain.sql  DDL_with_index.sql
