[project]
name = "lakehouse-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-langchain>=0.8.1",
    "databricks-sdk>=0.67.0",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.30",
    "langchain-groq>=0.3.8",
    "langchain-ollama>=0.3.10",
    "python-dotenv>=1.1.1",
    "supabase>=2.20.0",
]
