[project]
name = "lakehouse-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-langchain>=0.8.1",
    "databricks-sdk>=0.67.0",
    "google-genai>=1.41.0",
    "gradio>=5.49.0",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-ollama>=0.3.10",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.8",
    "langgraph-supervisor>=0.0.29",
    "langsmith>=0.4.31",
    "pypdf>=6.1.1",
    "pyprojroot>=0.3.0",
    "python-dotenv>=1.1.1",
    "supabase>=2.20.0",
]
